# msh

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  README.md  codex.md  docker-compose.yml
.cursor/: mcp.json.example
.cursor/rules/: 000-project.mdc  git-workflow.mdc  loop-engineering.mdc  rust-conventions.mdc  testing.mdc
.github/workflows/: ci.yml  release.yml
Formula/: msh.rb
docs/: README.md  agent-integration.md  agent-shell-positioning.md  ai-integration.md  benchmarks.md  compat-score.md  compatibility.md  competitive-analysis.md  dotfiles-compat.md  installation.md  memory-optimization.md  migration.md  plugin-api.md  positioning-report.md  roadmap.md  vision.md
docs/examples/: claude-settings.json  codex-config.toml  cursor-mcp.global.json  openclaw-mcp.json
msh/: Cargo.toml  Dockerfile
msh/benches/: shell_bench.rs
msh/src/: agent.rs  agent_runner.rs  ai.rs  ci_history.rs  command_json.rs  complete.rs  cond.rs  config.rs  descriptions.rs  doctor.rs  error.rs  exec.rs  expand.rs  heredoc.rs  highlight.rs  hints.rs  lib.rs  line_editor.rs  main.rs  mcp.rs  onboarding.rs  parse.rs  path_cache.rs  plugin.rs  prompt.rs  prompt_color.rs  prompt_setup.rs  script.rs  session.rs  setup.rs  shell.rs
msh/src/builtins/: alias.rs  cd.rs  echo.rs  exit.rs  export.rs  help.rs  history.rs  mod.rs  plugin.rs  pwd.rs  source.rs  stack.rs  which.rs
msh/tests/: basic.rs  compat.rs
plugins/examples/hello/: hello.wat  (+1 more)
scripts/: benchmark.sh  check.sh  compat-score.sh  dotfiles-compat.sh  msh-agent-exec.sh  msh-agent-shell.sh  msh-mcp.sh  verify-mcp.sh
